gh-264 Fix wrong colour variable

--- a/src/app/shared/data-element-in-request/data-element-in-request.component.scss
+++ b/src/app/shared/data-element-in-request/data-element-in-request.component.scss
@@ -80,7 +80,7 @@ $horizontal-offset-left: 6px;
   font-size: small;
   font-weight: normal;
   text-align: center;
-  background: $color-mauro-gold;
+  background: $color-accent;
   padding-left: 1.1em;
   margin-left: 0.2em;
   margin-right: 8.1em;
